Bug 58952 - Media controls status display should not be hidden for live streams
Summary: Media controls status display should not be hidden for live streams
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords:
Depends on: 53020
Blocks:
  Show dependency treegraph
 
Reported: 2011-04-19 18:01 PDT by Eric Carlson
Modified: 2011-04-19 21:06 PDT (History)
1 user (show)

See Also:


Attachments
Proposed patch. (2.31 KB, patch)
2011-04-19 18:15 PDT, Eric Carlson
dglazkov: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Carlson 2011-04-19 18:01:17 PDT
The media controls status display element should always be visible for live streams as it both displays a "Live Stream" label and positions the volume control and fullscreen button.
Comment 1 Eric Carlson 2011-04-19 18:15:55 PDT
Created attachment 90285 [details]
Proposed patch.
Comment 2 Dimitri Glazkov (Google) 2011-04-19 18:43:02 PDT
Comment on attachment 90285 [details]
Proposed patch.

Thanks!
Comment 3 Eric Carlson 2011-04-19 21:06:09 PDT
http://trac.webkit.org/changeset/84336